feat: Fixed the GH Action on the auto testing

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -25,4 +25,4 @@ jobs:
 
     - name: Test database with Pytest
       run: |
-        PYTHONPATH=./database/ pytest
+        PYTHONPATH=./main/database/ pytest
