feat: Attempt to fix Docker build GH Actions

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,4 +29,5 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/team_spirit:latest
-          file: ./main/Dockerfile
+          context: ./main
+          file: ./Dockerfile
