feat: Attempt to fix Docker build GH Actions again

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,4 +30,4 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/team_spirit:latest
           context: ./main
-          file: ./Dockerfile
+          file: ./main/Dockerfile
